; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/svndumpfilter/extr_svndumpfilter.c_set_revision_property.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/svndumpfilter/extr_svndumpfilter.c_set_revision_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.revision_baton_t = type { i32 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i32*)* @set_revision_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @set_revision_property(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.revision_baton_t*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.revision_baton_t*
  store %struct.revision_baton_t* %10, %struct.revision_baton_t** %7, align 8
  %11 = load %struct.revision_baton_t*, %struct.revision_baton_t** %7, align 8
  %12 = getelementptr inbounds %struct.revision_baton_t, %struct.revision_baton_t* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32* @apr_hash_pool_get(i32 %13)
  store i32* %14, i32** %8, align 8
  %15 = load %struct.revision_baton_t*, %struct.revision_baton_t** %7, align 8
  %16 = getelementptr inbounds %struct.revision_baton_t, %struct.revision_baton_t* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @apr_pstrdup(i32* %18, i8* %19)
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @svn_string_dup(i32* %21, i32* %22)
  %24 = call i32 @svn_hash_sets(i32 %17, i32 %20, i32 %23)
  %25 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %25
}

declare dso_local i32* @apr_hash_pool_get(i32) #1

declare dso_local i32 @svn_hash_sets(i32, i32, i32) #1

declare dso_local i32 @apr_pstrdup(i32*, i8*) #1

declare dso_local i32 @svn_string_dup(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
